# minipg

./: .gitignore  ADVANCED_EXAMPLES_TEST_REPORT.md  ALPHA_RELEASE_NOTES.md  ANTLR4_FULL_COMPATIBILITY.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v0.1.0-alpha.2.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPARISON_WITH_ANTLR4RUST.md  COMPARISON_WITH_PEST.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETION_SUMMARY.md  CONSOLIDATION_COMPLETE.md  CONSOLIDATION_SUMMARY.md  COVERAGE_SUMMARY.md  C_CPP_CODEGEN_IMPLEMENTATION.md  Cargo.toml  Cargo.toml.old  DECISIONS.md  DOCS_RS_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_v0.1.5.md  EXTENDED_SESSION_SUMMARY.md  FEATURES.md  FINAL_DEVELOPMENT_SESSION.md  FINAL_SESSION_REPORT.md  GO_CODEGEN_IMPLEMENTATION.md  GRAMMARS_V4_ANTLR4_COMPLETION.md  GRAMMARS_V4_TESTS_IMPLEMENTATION.md  GRAMMAR_COMPOSITION_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  KNOWN_LIMITATIONS.md  LEXER_MODES_IMPLEMENTATION_GUIDE.md  LICENSE-APACHE  MIGRATION_COMPLETE.md  NEXT_PHASE.md  ORGANIZATION_COMPLETE.md  PHASE1_INCREMENTAL_PARSING.md  PHASE2_QUERY_LANGUAGE.md  (+24 more)
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
archived_generators/: c.rs  cpp.rs  go.rs  java.rs  mcp.rs  typescript.rs
archived_generators/minipg-incremental/: Cargo.toml
archived_generators/minipg-incremental/src/: edit.rs  lazy.rs  lib.rs  parallel.rs  parser.rs
archived_generators/treesitter-rs/: Cargo.toml
archived_generators/treesitter-rs/src/: lib.rs
archived_generators/treesitter-rs/src/codegen/: mod.rs  treesitter.rs
archived_generators/treesitter-rs/src/query/: capture.rs  matcher.rs  mod.rs  parser.rs  pattern.rs
benches/: analysis_bench.rs  codegen_bench.rs  parser_bench.rs  performance_bench.rs
crates/minipg-analysis/: Cargo.toml
crates/minipg-analysis/src/: ambiguity.rs  first_follow.rs  left_recursion.rs  lib.rs  reachability.rs  semantic.rs  validator.rs
crates/minipg-analysis/tests/: integration_tests.rs  semantic_tests.rs  validator_tests.rs
crates/minipg-analysis/tests/snapshots/: semantic_tests__duplicate_rule_detection.snap  semantic_tests__left_recursion_detection.snap  semantic_tests__undefined_rule_detection.snap
crates/minipg-ast/: Cargo.toml
crates/minipg-ast/src/: element.rs  grammar.rs  lib.rs  rule.rs  visitor.rs
crates/minipg-ast/tests/: ast_tests.rs  proptest_ast.rs  visitor_tests.rs
crates/minipg-benchmarks/: Cargo.toml
crates/minipg-benchmarks/benches/: codegen_benchmarks.rs
crates/minipg-benchmarks/src/: lib.rs
crates/minipg-cli/: Cargo.toml
crates/minipg-cli/src/: cli.rs  commands.rs
crates/minipg-codegen/: Cargo.toml
crates/minipg-codegen/src/: dfa.rs  javascript.rs  lib.rs  lookup_table.rs  python.rs  rust.rs  template.rs  typescript.rs  visitor_gen.rs
crates/minipg-codegen/tests/: codegen_tests.rs  compile_tests.rs  cross_language_tests.rs  error_recovery_tests.rs  generated_code_tests.rs  integration_tests.rs  template_tests.rs
crates/minipg-codegen/tests/snapshots/: codegen_tests__rust_codegen_simple.snap
crates/minipg-core/: Cargo.toml
crates/minipg-core/src/: diagnostic.rs  lib.rs  traits.rs  types.rs
crates/minipg-core/tests/: diagnostic_tests.rs  error_tests.rs  types_tests.rs
crates/minipg-parser/: Cargo.toml
crates/minipg-parser/src/: error_recovery.rs  lexer.rs  lib.rs  parser.rs
crates/minipg-parser/tests/: lexer_tests.rs  parser_tests.rs  proptest_lexer.rs
crates/minipg-parser/tests/snapshots/: parser_tests__parse_simple_grammar.snap
docs/: ACTION_TRANSLATION.md  ANTLR4_COMPATIBILITY.md  API.md  CODEGEN_STANDARD.md  CODE_GENERATION_IMPROVEMENTS.md  COMPARISON_SUMMARY.md  DOCUMENTATION_INDEX.md  EDITOR_INTEGRATION_STRATEGY.md  EXAMPLES_GUIDE.md  GETTING_STARTED.md  GO_GUIDE.md  GRAMMARS_V4_TESTING.md  GRAMMARS_V4_TEST_RESULTS.md  GRAMMAR_SYNTAX.md  IMPLEMENTATION.md  INDEX.md  JAVASCRIPT_CODE_GENERATION.md  JAVASCRIPT_GUIDE.md  MCP_SERVER.md  MULTI_LANGUAGE_PLAN.md  PUBLISHING.md  PYTHON_CODE_GENERATION.md  PYTHON_GUIDE.md  README.md  RUNTIME_DECISION.md  RUST_CODE_GENERATION.md  RUST_GUIDE.md  SECURITY_AUDIT.md  SIMPLIFICATION_PROGRESS.md  TESTING.md  TREESITTER_GUIDE.md  TYPESCRIPT_GUIDE.md  USER_GUIDE.md  _config.yml  index.html
docs/archive/: ACTION_TRANSLATION_IMPLEMENTATION.md  BUILD_FIX_SUMMARY.md  BUILD_VERIFICATION_CHECKLIST.md  FOLDER_STRUCTURE.md  GRAMMARS_V4_ANTLR4_TESTING.md  INDEX.md  JAVA_CODEGEN_IMPLEMENTATION.md  LEXER_MODES_IMPLEMENTATION.md  PROGRESS.md  PROJECT_COMPLETION_SUMMARY.md  RULE_FEATURES_IMPLEMENTATION.md  SESSION_SUMMARY_OCT26_COMPLETE.md
docs/examples/: 01-BASIC-CALCULATOR.md  02-JSON-PARSER.md  (+1 more)
examples/: ActionsExample.g4  CSS.g4  CompleteJSON.g4  Config.g4  Expression.g4  GraphQL.g4  JavaSubset.g4  LexerModes.g4  Markdown.g4  Protocol.g4  PythonSubset.g4  Query.g4  README.md  RuleFeatures.g4  SQL.g4  SimpleCalc.g4  YAML.g4  calculator.g4  json.g4  test_charclass.g4  test_simple_charclass.g4
fuzz/: Cargo.toml  README.md
queries/: highlights.scm
src/: commands.rs  error.rs  lib.rs  main.rs  mcp.rs  types.rs
tests/: codegen_parameterized_rules.rs  debug_charclass.rs  e2e_full_pipeline.rs  e2e_simple_pipeline.rs  end_to_end_test.rs  fuzzing_tests.rs  integration_grammar_tests.rs  integration_test.rs  large_file_tests.rs  large_file_tests.rs.disabled  memory_profiling.rs  parser_advanced_features.rs  property_based_tests.rs  test_advanced_examples.rs  test_all_examples.rs  test_all_g4_files.rs  test_analysis_modules.rs  test_antlr4_compatibility.rs  test_antlr4_test_suite.rs  test_codegen_comprehensive.rs  test_codegen_comprehensive.rs.disabled  test_compatibility.rs  test_completejson_line.rs  test_enhanced_errors.rs  test_examples.rs  test_features.rs  test_grammar_composition.rs  test_grammars_v4_all.rs  test_grammars_v4_compatibility.rs  test_incremental_comprehensive.rs  test_integration.rs  test_integration.rs.disabled  test_lexer_modes_parsing.rs  test_list_labels.rs  test_modes_channels_actions.rs  test_named_actions.rs  test_named_actions_codegen.rs  test_query_comprehensive.rs  test_rule_features.rs  test_unicode_escape.rs
(+101 files in other folders)
