[package]
name = "minipg"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
authors = ["minipg contributors"]
license = "Apache-2.0"
repository = "https://github.com/yingkitw/minipg"
homepage = "https://github.com/yingkitw/minipg"
documentation = "https://docs.rs/minipg"
readme = "README.md"
keywords = ["parser", "generator", "antlr4", "compiler", "lexer"]
categories = ["parser-implementations", "development-tools", "compilers"]
description = "A blazingly fast parser generator with ANTLR4 compatibility"

[[bin]]
name = "minipg"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = "1.41"
proptest = "1.6"
criterion = "0.5"

[[bench]]
name = "codegen_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
