[package]
name = "minipg"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
authors = ["Ying Kit WONG"]
license = "Apache-2.0"
repository = "https://github.com/yingkitw/minipg"
homepage = "https://github.com/yingkitw/minipg"
description = "A modern parser generator supporting ANTLR4 grammars with code generation for Rust, Python, and JavaScript"
keywords = ["parser", "generator", "antlr", "compiler","treesitter"]
categories = ["parser-implementations", "development-tools", "compilers"]

[[bin]]
name = "minipg"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1.0"

[features]
default = ["cli"]
cli = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]