[package]
name = "minipg-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Semantic analysis and validation for minipg parser generator"
readme = "../../README.md"

[dependencies]
minipg-core.workspace = true
minipg-ast.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
