[package]
name = "minipg-ast"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Abstract Syntax Tree definitions and visitor patterns for minipg parser generator"
readme = "../../README.md"

[dependencies]
minipg-core = { version = "0.1.0-alpha.1", path = "../minipg-core" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
