[package]
name = "minipg-benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
minipg-core.workspace = true
minipg-ast.workspace = true
minipg-parser.workspace = true
minipg-analysis.workspace = true
minipg-codegen.workspace = true
criterion.workspace = true

[[bench]]
name = "parser_bench"
harness = false
path = "../../benches/parser_bench.rs"

[[bench]]
name = "analysis_bench"
harness = false
path = "../../benches/analysis_bench.rs"

[[bench]]
name = "codegen_bench"
harness = false
path = "../../benches/codegen_bench.rs"

[[bench]]
name = "codegen_benchmarks"
harness = false
path = "benches/codegen_benchmarks.rs"
