[package]
name = "minipg-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Command-line interface for minipg parser generator"
readme = "../../README.md"

[[bin]]
name = "minipg"
path = "src/main.rs"

[dependencies]
minipg-core = { version = "0.1.0-alpha.1", path = "../minipg-core" }
minipg-ast = { version = "0.1.0-alpha.1", path = "../minipg-ast" }
minipg-parser = { version = "0.1.0-alpha.1", path = "../minipg-parser" }
minipg-analysis = { version = "0.1.0-alpha.1", path = "../minipg-analysis" }
minipg-codegen = { version = "0.1.0-alpha.1", path = "../minipg-codegen" }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
insta.workspace = true
