[package]
name = "minipg-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Code generation for target languages (Rust, Python, JS, TS) for minipg parser generator"
readme = "../../README.md"

[dependencies]
minipg-core = { version = "0.1.0-alpha.1", path = "../minipg-core" }
minipg-ast = { version = "0.1.0-alpha.1", path = "../minipg-ast" }
minipg-analysis = { version = "0.1.0-alpha.1", path = "../minipg-analysis" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
minipg-parser = { path = "../minipg-parser" }
