[package]
name = "minipg-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Grammar file parser (lexer + parser) for minipg parser generator"
readme = "../../README.md"

[dependencies]
minipg-core = { version = "0.1.0-alpha.1", path = "../minipg-core" }
minipg-ast = { version = "0.1.0-alpha.1", path = "../minipg-ast" }
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
